# fast_car_api

./: README.md
fast_car_api/: pyproject.toml
fast_car_api/src/fast_car_api/: app.py  routers.py
